# ekpmeasure

./: .readthedocs.yaml  LICENSE  README.md  docreqs.txt  mkdocs.yml  moke_control.ipynb  readthedocs.yaml  requirements.txt  setup.cfg
FE_switching/: main.py
analysis/: __init__.py  core.py  load.py  utils.py
analysis/FE_switching/: __init__.py  functions_on_data.py  main.py
analysis/asylum/: main.py
analysis/radiant/: main.py
control/: core.py
control/gmr/: main.py
control/magnon/: main.py
control/moke/: __init__.py
control/nonlocal/: main.py  temp.py
docs/: analysis-core-reference.md  analysis-data-reference.md  analysis-dataset-reference.md  analysis-experiments-reference.md  analysis-fe_switching-reference.md  analysis-load-reference.md  control-experiment-reference.md  control-experiments-reference.md  control-instrument-reference.md  index.md  start.md
docs/source/: conf.py  ekpmeasure.analysis.FE_switching.rst  ekpmeasure.analysis.asylum.rst  ekpmeasure.analysis.rst  ekpmeasure.control.egmr.rst  ekpmeasure.control.gmr.rst  ekpmeasure.control.instruments.keithley2400.rst  ekpmeasure.control.instruments.keithley6221.rst  ekpmeasure.control.instruments.lakeshore475.rst  ekpmeasure.control.instruments.lakeshore647.rst  ekpmeasure.control.instruments.srs830.rst  ekpmeasure.control.instruments.tektronixTDS620B.rst  ekpmeasure.control.magnon.rst  ekpmeasure.control.moke.rst  ekpmeasure.control.rst  ekpmeasure.rst  ekpy.analysis.FE_switching.rst  (+23 more)
examples/: Data.ipynb  DataFabrication.ipynb  MetaData.ipynb  Overview.ipynb  README.md
moke/: main.py
(+166 files in other folders)
