[metadata]
name = ekpmeasure
version = 0.0.8
author = Eric Parsonnet
author_email = e.parsonnet@berkeley.edu
description = A collection of control and analysis code for experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eparsonnet93/ekpmeasure
project_urls =
    Bug Tracker = https://github.com/eparsonnet93/ekpmeasure/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src