[metadata]
name = ekpmeasure
version = 0.1.2
author = Eric Parsonnet
author_email = e.parsonnet@berkeley.edu
description = A collection of control and analysis code for experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eparsonnet93/ekpmeasure
project_urls =
    Bug Tracker = https://github.com/eparsonnet93/ekpmeasure/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
	pandas==1.3.2
	numpy==1.19.2
	matplotlib==3.3.4
	scipy==1.6.2
	pyvisa==1.11.3
	IPython==7.22.0
	igor==0.3
python_requires = >=3.6

[options.packages.find]
where = src